# mneme

./: .env.example  .gitignore  .pre-commit-config.yaml  .replit  0001_init.sql  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  START_HERE.md  pyproject.toml
agent_service/: __init__.py  config.py  db_registry.py  embeddings.py  errors.py  history.py  interfaces.py  models.py  provision.py  proxy.py  routing.py  server.py  warmup.py
agent_service/advisors/: base.py  cache_stale.py  conflict.py  expert_base.py  saaz_expert.py  schema_drift.py
agent_service/memory/: context_cache.py  episodes.py  notes.py  project.py  schema.py  store.py
agent_service/middleware/: advisory.py  audit.py  require_auth.py  session.py  timeout.py
agent_service/provisioners/: base.py  vercel.py
attached_assets/: Pasted-Pull-the-latest-main-it-now-contains-the-conftest-fix-t_1779428853312.txt  Pasted-The-mneme-repo-has-been-updated-on-main-Pull-the-latest_1779425256800.txt  Pasted-UPSTREAM-DB-MCP-URL-what-to-paste-into-mneme-Developmen_1779411199296.txt
db_mcp/: server.py
docs/: DATABASE.md  DEPLOY_PHASE_2_5.md  REPLIT_AGENT_NEW_DB.md  ROADMAP.md  STATUS.md  UPSTREAM.md
library_demo/: schema.sql  server.py
migrations/: 0002_sessions.sql  0003_database_registry.sql  0004_project_memory.sql
neon_mcp/: server.py
tests/: conftest.py  test_advisors.py  test_audit.py  test_audit_xff.py  test_db_registry.py  test_history_tools.py  test_memory.py  test_phase2_unit.py  test_project_memory.py  test_prompt_battery.py  test_provisioners.py  test_proxy.py  test_routing.py  test_saaz_expert.py  test_session_client_info.py  test_session_middleware_fk.py  test_warmup_tools.py
tests/integration/: test_mcp_capabilities.py  test_phase2.py  test_smoke.py  test_warmup.py
