[project]
name = "mneme"
version = "0.0.1"
description = "Memory-aware MCP middleware between Claude Code and your databases."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

dependencies = [
    # MCP server + middleware + proxy
    "fastmcp>=3.0,<4.0",
    # Agent loop and memory store
    "langgraph>=1.0,<2.0",
    "langgraph-checkpoint-postgres>=3.1,<4.0",
    "langchain-mcp-adapters>=0.2,<0.3",
    # LLM provider
    "anthropic>=0.40",
    # Postgres + vector
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    # Web sidecar + config
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.5",
    # Phase 2: SQL parsing for conflict detection
    "sqlglot>=25",
    # Logging
    "structlog>=24",
    # Rate limiting
    "slowapi>=0.1.9",
    # HTTP client for cloud-provider REST APIs (Vercel provisioner)
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4",
    "httpx>=0.27",
    "pytest-postgresql>=7.0",
    "slowapi>=0.1.9",
]

[project.scripts]
mneme = "agent_service.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_service"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "fastmcp.*",
    "langgraph.*",
    "langchain_mcp_adapters.*",
    "langgraph_checkpoint_postgres.*",
    "pgvector.*",
    "slowapi.*",
    "pytest_postgresql.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require real Helium Postgres and live upstream MCP (deselect with '-m not integration')",
]
